--- a/mm.html
+++ b/mm.html
@@ -2,25 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mwansa's Makeover</title>
+  <title>MWANSA'S MAKEOVER</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background-color: #ffe6f0; /* Light pink */
+      background-color: #ffe6f0;
       color: #333;
+      text-transform: uppercase; /* all caps */
     }
 
     header {
-      background-color: #ffc0cb; /* Soft pink */
+      background-color: #ffc0cb;
       text-align: center;
       padding: 20px;
     }
 
     header h1 {
       margin: 10px;
-      color: #c71585; /* Deep pink text */
+      color: #c71585;
     }
 
     .profile-img {
@@ -32,141 +33,199 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.2);
     }
 
+    /* === SOCIAL ICONS === */
     .social-icons {
       margin: 20px;
       text-align: center;
     }
-
     .social-icons a {
       margin: 10px;
       display: inline-block;
     }
-
     .social-icons img {
       width: 40px;
       height: 40px;
     }
 
+    /* === GALLERY SHOWCASE === */
     .gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 10px;
-  padding: 20px;
-  background-color: white;
-}
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 15px;
+      padding: 30px;
+      background: #fff;
+    }
 
-.gallery img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-  object-fit: cover;
-  transition: transform 0.3s ease;
-}
+    .gallery img {
+      width: 100%;
+      height: 220px;
+      border-radius: 12px;
+      object-fit: cover;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      box-shadow: 0 5px 12px rgba(0,0,0,0.15);
+    }
 
-.gallery img:hover {
-  transform: scale(1.05);
-}
+    .gallery img:hover {
+      transform: scale(1.08);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+    }
 
-
-    .map-container {
-      padding: 20px;
+    /* === PACKAGE SECTION === */
+    .packages {
+      padding: 40px 20px;
+      background: #fff;
       text-align: center;
     }
 
-    iframe {
-      width: 90%;
-      height: 300px;
-      border: 2px solid #ffc0cb;
-      border-radius: 10px;
+    .packages h2 {
+      color: #c71585;
+      margin-bottom: 30px;
+      font-size: 2em;
     }
 
-    .calendar-container {
-      padding: 20px;
+    .package-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .package-card {
+      background: #ffe6f0;
+      border-radius: 15px;
+      padding: 25px;
+      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      position: relative;
+      overflow: hidden;
+      animation: float 4s ease-in-out infinite;
+    }
+
+    .package-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 12px 25px rgba(0,0,0,0.25);
+    }
+
+    .package-card h3 {
+      color: #ff1493;
+      margin-bottom: 10px;
+    }
+
+    .package-card p {
+      font-size: 14px;
+      margin-bottom: 15px;
+    }
+
+    .package-card input[type="number"] {
+      width: 80px;
+      padding: 8px;
       text-align: center;
-    }
-
-    .calendar-container input[type="date"] {
-      padding: 10px;
       border-radius: 5px;
-      border: 1px solid #ffc0cb;
+      border: 1px solid #ff69b4;
+      margin-bottom: 15px;
     }
 
-    .call-btn {
-      display: block;
-      margin: 30px auto;
-      padding: 15px 30px;
-      background-color: #ff69b4; /* Hot pink */
-      color: white;
-      text-decoration: none;
+    .book-btn {
+      display: inline-block;
+      padding: 12px 20px;
+      background: linear-gradient(135deg, #ff69b4, #c71585);
+      color: #fff;
       border-radius: 8px;
+      text-decoration: none;
       font-weight: bold;
+      transition: background 0.3s ease;
+    }
+
+    .book-btn:hover {
+      background: linear-gradient(135deg, #c71585, #ff69b4);
+    }
+
+    /* === FLOATING EFFECT === */
+    @keyframes float {
+      0% { transform: translateY(0px); }
+      50% { transform: translateY(-8px); }
+      100% { transform: translateY(0px); }
     }
 
     footer {
-      background-color: #ffc0cb;
+      background: #ffc0cb;
       padding: 10px;
       text-align: center;
     }
-
   </style>
 </head>
 <body>
 
 <header>
-  <img src="1.jpeg" alt="Mwansa Profile" class="profile-img">
-  <h2 style="margin: 5px; color: #c71585;">Get Nailed Zm</h2>
-  <h1>Mwansa's Makeover</h1>
-  <p>Nail Technician & Makeup Artist - Lusaka</p>
+  <img src="1.jpeg" alt="MWANSA PROFILE" class="profile-img">
+  <h2>GET NAILED ZM</h2>
+  <h1>MWANSA'S MAKEOVER</h1>
+  <p>NAIL TECHNICIAN & MAKEUP ARTIST - LUSAKA</p>
 </header>
 
-
+<!-- SOCIAL ICONS -->
 <div class="social-icons">
-  <a href="https://www.facebook.com/mwansa.abigail.2025"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="Facebook"></a>
-  <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt="Instagram"></a>
-  <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TikTok"></a>
-  <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="Twitter"></a>
+  <a href="https://www.facebook.com/mwansa.abigail.2025"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" alt="FACEBOOK"></a>
+  <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt="INSTAGRAM"></a>
+  <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png" alt="TIKTOK"></a>
+  <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733579.png" alt="TWITTER"></a>
 </div>
 
-
-<h2 style="text-align:center; color:#c71585;">Nail Section</h2>
+<!-- FULL GALLERY SHOWCASE -->
+<h2 style="text-align:center; color:#c71585;">OUR WORKS SHOWCASE</h2>
 <div class="gallery">
-  <img src="a.jpeg" alt="Work 1">
-  <img src="aa.jpeg" alt="Work 2">
-  <img src="aaa.jpeg" alt="Work 3">
-  <img src="d.jpeg" alt="Work 4">
-  <img src="dd.jpeg" alt="Work 5">
-  <img src="ddd.jpeg" alt="Work 6">
+  <!-- Nails -->
+  <img src="a.jpeg" alt="NAIL 1">
+  <img src="aa.jpeg" alt="NAIL 2">
+  <img src="aaa.jpeg" alt="NAIL 3">
+  <img src="d.jpeg" alt="NAIL 4">
+  <img src="dd.jpeg" alt="NAIL 5">
+  <img src="ddd.jpeg" alt="NAIL 6">
+  <!-- Makeup -->
+  <img src="b.jpeg" alt="MAKEUP 1">
+  <img src="bb.jpeg" alt="MAKEUP 2">
+  <img src="bbb.jpeg" alt="MAKEUP 3">
+  <img src="c.jpeg" alt="MAKEUP 4">
+  <img src="cc.jpeg" alt="MAKEUP 5">
+  <img src="ccc.jpeg" alt="MAKEUP 6">
 </div>
 
-<h2 style="text-align:center; color:#c71585;">Make Up Section</h2>
-<div class="gallery">
-  <img src="b.jpeg" alt="Work 7">
-  <img src="bb.jpeg" alt="Work 8">
-  <img src="bbb.jpeg" alt="Work 9">
-  <img src="c.jpeg" alt="Work 10">
-  <img src="cc.jpeg" alt="Work 11">
-  <img src="ccc.jpeg" alt="Work 12">
-</div>
+<!-- PACKAGES & BOOKINGS -->
+<section class="packages">
+  <h2>OUR PACKAGES & BOOKINGS</h2>
+  <div class="package-grid">
 
-<div class="map-container">
-  <h2 style="color:#c71585;">Find Me in Lusaka</h2>
-  <iframe 
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15684.536465560314!2d28.28489494446465!3d-15.387525516065142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1940fcb95d50219b%3A0xe60e22889c5113bb!2sLusaka!5e0!3m2!1sen!2szm!4v1700000000000"
-    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
-</div>
+    <!-- SINGLE CLIENT -->
+    <div class="package-card">
+      <h3>SINGLE CLIENT PACKAGE</h3>
+      <p>PERFECT FOR INDIVIDUAL CLIENTS LOOKING FOR A PERSONAL MAKEUP OR NAIL SESSION.</p>
+      <label>NUMBER OF PEOPLE:</label><br>
+      <input type="number" min="1" value="1"><br>
+      <a href="https://wa.me/260973649011?text=I%20WANT%20TO%20BOOK%20A%20SINGLE%20CLIENT%20PACKAGE." class="book-btn" target="_blank">BOOK NOW</a>
+    </div>
 
-<!-- Makeup Call & WhatsApp -->
-<a href="tel:+260973649011" class="call-btn">📞 Call for Makeup Appointments</a>
-<a href="https://wa.me/260973649011?text=Hello%20Mwansa,%20I%20would%20like%20to%20book%20a%20makeup%20appointment." class="call-btn" target="_blank">💬 WhatsApp for Makeup</a>
+    <!-- WEDDING -->
+    <div class="package-card">
+      <h3>WEDDING PACKAGE</h3>
+      <p>EXCLUSIVE PACKAGE FOR BRIDES AND THEIR TEAM. FULL NAILS & MAKEUP INCLUDED.</p>
+      <label>NUMBER OF PEOPLE:</label><br>
+      <input type="number" min="1" value="1"><br>
+      <a href="https://wa.me/260771942435?text=I%20WANT%20TO%20BOOK%20A%20WEDDING%20PACKAGE." class="book-btn" target="_blank">BOOK NOW</a>
+    </div>
 
-<!-- Nail Call & WhatsApp -->
-<a href="tel:+260771942435" class="call-btn">📞 Call for Nail Appointments</a>
-<a href="https://wa.me/260771942435?text=Hi%20Mwansa,%20I%20am%20interested%20in%20a%20nail%20appointment." class="call-btn" target="_blank">💬 WhatsApp for Nails</a>
+    <!-- ARTIST -->
+    <div class="package-card">
+      <h3>ARTIST PACKAGE</h3>
+      <p>DESIGNED FOR MUSICIANS, MODELS, OR PERFORMERS PREPARING FOR SHOWS & SHOOTS.</p>
+      <label>NUMBER OF PEOPLE:</label><br>
+      <input type="number" min="1" value="1"><br>
+      <a href="https://wa.me/260973649011?text=I%20WANT%20TO%20BOOK%20AN%20ARTIST%20PACKAGE." class="book-btn" target="_blank">BOOK NOW</a>
+    </div>
 
+  </div>
+</section>
 
 <footer>
-  &copy; 2025 Mwansa's Makeover | Designed by Sande Tech Solutions
+  &copy; 2025 MWANSA'S MAKEOVER | DESIGNED BY SANDE TECH SOLUTIONS
 </footer>
 
 </body>
